# AutoDS-Tools

./: .dockerignore  .env_example  .gitignore  Makefile  README.md  autods_config.yaml.example  justfile  pyproject.toml
.agents/plans/: optional-workos-auth-architecture.md
.agents/references/: README.md  workos-auth-research.md
apps/cli/: README.md  pyproject.toml
apps/cli/src/autods_cli/: main.py
apps/cli/tests/unit/: test_cli.py
apps/frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/frontend/src/app/: globals.css  page.tsx
apps/frontend/src/app/admin/users/: page.tsx
apps/frontend/src/app/api/auth/callback/: route.ts
apps/frontend/src/app/api/auth/login/: route.ts
apps/frontend/src/components/: providers.tsx
apps/frontend/src/components/chat/: AssistantCodeBlock.tsx  ChatContainer.tsx  CodeBlock.tsx  ExecutionCell.tsx  FunStatus.tsx  InputArea.tsx  MarkdownRenderer.tsx  Message.tsx  ToolCallBlock.tsx  ToolCallMessage.tsx  WelcomeScreen.tsx
apps/frontend/src/components/datasets/: DatasetManagerDialog.tsx
apps/frontend/src/components/files/: CSVPreview.tsx  FileExplorerDialog.tsx  FilePreview.tsx  FileTree.tsx  JupyterPreview.tsx  PythonPreview.tsx
apps/frontend/src/components/layout/: Header.tsx  Sidebar.tsx
apps/frontend/src/components/settings/: LibraryInstallerDialog.tsx
apps/frontend/src/components/ui/: input.tsx  textarea.tsx
apps/frontend/src/hooks/: useAgentWebSocket.ts  useArtifacts.ts  useAuth.ts  useDatasets.ts  useSessions.ts
apps/frontend/src/lib/: query-client-bridge.ts
apps/frontend/src/lib/api/: base-url.ts  client.ts
apps/frontend/src/lib/utils/: assistant-segments.test.ts  assistant-segments.ts  chat-render-items.test.ts  chat-render-items.ts  format.ts  terminal-output.ts  xml-parser.ts
apps/frontend/src/stores/: useSessionStore.ts
apps/server/: Dockerfile  README.md  pyproject.toml
apps/server/src/autods_web/: __init__.py  api.py  auth.py  loggers.py  server.py
apps/server/tests/unit/: test_api.py
docker/: .env.example  Caddyfile  README.md  docker-compose.yml
