[project]
name = "autods-workspace"
version = "0.1.0"
description = "Workspace root for the AutoDS monorepo"
requires-python = ">=3.12"
dependencies = [
    "autods-cli",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.13.0",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "packages/autods",
    "apps/server",
    "apps/cli",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
explicit_package_bases = true
namespace_packages = true
mypy_path = "packages/autods/src:apps/server/src:apps/cli/src"
ignore_missing_imports = true
exclude = [
    "apps/frontend",
    "data",
    "mle-bench",
]

[[tool.mypy.overrides]]
module = [
    "dotenv.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_google_genai.*",
    "langchain_openai.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
fix = true
extend-exclude = [
    "apps/frontend/.next",
    "apps/frontend/node_modules",
    "bench/results",
    "mle-bench",
    "RepoMaster",
]

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["autods", "autods_cli", "autods_web"]

[tool.pytest.ini_options]
testpaths = [
    "packages/autods/tests",
    "apps/server/tests",
    "apps/cli/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.uv.sources]
autods-cli = { workspace = true }
pygrad = { git = "https://github.com/AaLexUser/pygrad.git" }
