[project]
name = "autods-workspace"
version = "0.1.0"
description = "Workspace root for the AutoDS monorepo"
requires-python = ">=3.12"
dependencies = [
    "autods-cli",
    "langfuse>=4.6.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.13.0",
    "ty>=0.0.27",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "packages/autods",
    "packages/pygrad",
    "apps/server",
    "apps/cli",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
extend-exclude = [
    "apps/frontend/.next",
    "apps/frontend/node_modules",
    "bench/results",
    "mle-bench",
    "RepoMaster",
]

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["autods", "autods_cli", "autods_web", "pygrad"]

[tool.pytest.ini_options]
testpaths = [
    "packages/autods/tests",
    "packages/pygrad/tests",
    "apps/server/tests",
    "apps/cli/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "warn"

[[tool.ty.overrides]]
include = ["packages/**/tests/**", "apps/**/tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
all = "warn"
possibly-unresolved-reference = "ignore"

[tool.uv.sources]
autods-cli = { workspace = true }
pygrad = { workspace = true }
