[project]
name = "autods-cli"
version = "0.1.0"
description = "CLI for AutoDS"
requires-python = ">=3.12"
dependencies = [
    "autods",
    "autods-web",
    "click>=8.2.1",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[project.scripts]
autods = "autods_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autods_cli"]

[tool.hatch.build.targets.sdist]
include = ["src/autods_cli/**", "tests/**"]

[tool.uv.sources]
autods = { workspace = true }
autods-web = { workspace = true }
