[project]
name = "autods-web"
version = "0.1.0"
description = "FastAPI server for AutoDS"
requires-python = ">=3.12"
dependencies = [
    "autods",
    "fastapi>=0.127.0",
    "pydantic>=2.11.0",
    "pygrad",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
autods-web = "autods_web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autods_web"]

[tool.hatch.build.targets.sdist]
include = ["src/autods_web/**", "tests/**"]

[tool.uv.sources]
autods = { workspace = true }
pygrad = { workspace = true }
